# llmtestgen

./: .env-default  .gitignore  README.md  default.env  pyproject.toml  requirements.txt
app/: openrouter_client.py
fake_repo/specs/: task_service_manual_tests.md
fake_repo/src/: models.py  task_service.py
fake_repo/tests/: generated_task_service_filelist.md  generated_task_service_none.md  generated_test_task_service.md
llmtestgen/: __init__.py  cli.py
llmtestgen/core/: git_repository.py  openai_client.py
scripts/: generate_task_service_tests.py
specs/: task_service.md
src/: cli.py
src/core/: __init__.py  utils_warnings.py
src/llmtestgen/: cli.py  cli_args.py
src/llmtestgen/core/: utils_errors.py
src/llmtestgen/services/spec_analyser/: parse_router_normalizer.py
src/llmtestgen/services/test_generation/: python_test_writer.py  test_spec_generator.py
src/services/spec_analyser/: parse_router_normalizer.py
src/wrappers/: git_repository.py  openrouter_client.py
test/: conftest.py  test_git_repository.py  test_live_openrouter.py  test_openai_client.py  test_openrouter_client.py
tests/: conftest.py  generated_task_service_filelist.py  generated_task_service_none.py  generated_test_task_service.py
tests/parsers/: test_json_parser.py  test_llm_parser_live.py  test_markdown_parser.py  test_openapi_parser.py  test_spec_router.py  test_yaml_parser.py
tests/test_generation/: test_python_test_writer.py
tests/wrappers/: test_git_repository.py  test_live_openrouter.py  test_openai_client.py  test_openrouter_client.py
(+5 files in other folders)
